[gd_scene load_steps=9 format=3 uid="uid://da4dg5dy4ro8v"]

[ext_resource type="FontFile" uid="uid://xghvky6trdit" path="res://assets/GiantRobots-BWZan.ttf" id="1_640wx"]
[ext_resource type="Script" uid="uid://bim31v43d1yia" path="res://hud/hud.gd" id="1_a2258"]
[ext_resource type="Texture2D" uid="uid://dyuwg3aqb8p86" path="res://assets/player_small.png" id="2_a2258"]
[ext_resource type="Texture2D" uid="uid://i55wh183qq2x" path="res://assets/shield_gold.png" id="3_1kkc0"]
[ext_resource type="Texture2D" uid="uid://iayj538h6gv6" path="res://assets/play_button.png" id="3_1xsix"]
[ext_resource type="Texture2D" uid="uid://dn0aakvk8k3rc" path="res://assets/bar_glass_200.png" id="4_qv4qp"]
[ext_resource type="Texture2D" uid="uid://cvrn5uarh7qnq" path="res://assets/play_button_h.png" id="4_rftc2"]
[ext_resource type="Texture2D" uid="uid://bfxdm5p8jcbep" path="res://assets/bar_green_200.png" id="5_sh35x"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_a2258")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_640wx")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_1kkc0")
stretch_mode = 3

[node name="ShieldBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.01
texture_over = ExtResource("4_qv4qp")
texture_progress = ExtResource("5_sh35x")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_a2258")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_a2258")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_a2258")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -154.5
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("1_640wx")
theme_override_font_sizes/font_size = 96
text = "SPACE ROCKS!"
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_1xsix")
texture_hover = ExtResource("4_rftc2")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
